# dist-release

./: Cargo.toml  README.md  dist-workspace.toml
crates/crate-bin/: Cargo.toml
crates/crate-bin-no-dist/: Cargo.toml
crates/crate-lib/: Cargo.toml
crates/crate-lib-dep/: Cargo.toml
