[workspace]
members = [
    "crates/crate-bin",
    "crates/crate-bin-no-dist",
    "crates/crate-lib",
    "crates/crate-lib-dep",
]
resolver = "2"

[workspace.package]
version = "0.1.7"
description = "workspace to test github actions with cargo-dist and cargo-release"
edition = "2024"
documentation = "https://github.com/Hennzau/arrow-message"
license = "Apache-2.0"
repository = "https://github.com/Hennzau/dist-release"

[workspace.dependencies]
crate-lib-dep.version = "0.1.6"
crate-lib-dep.path = "crates/crate-lib-dep"

crate-lib.version = "0.1.6"
crate-lib.path = "crates/crate-lib"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
